src/test/deca/syntax/valid/multipleDecl.deca
{
    int a, b=8, c;
    float x=4.2, y, z=3;

    c=9;
}