src/test/deca/syntax/invalid/missingEndInstruction.deca
// Oublie d'un point virgule

{
    int a = 4;
    float b
    print(a);
}